[project]
name = "clic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch==2.2.2",
    "torchvision==0.17.2",
    "numpy==1.26.4",
    "pillow==10.2.0",
    "tqdm==4.67.1",
    "open-clip-torch==2.31.0",
    "openai-clip==1.0.1",
    "spacy==3.8.4",
    "wandb==0.19.8",
    "pandas==2.2.3",
    "datasets==3.3.1",
    "requests==2.32.3",
    "torchmetrics==1.4.0",
    "ftfy==6.3.1",
    "regex==2024.11.6",
    "tokenizers==0.21.1",
    "transformers==4.51.3",
    "timm==1.0.15",
    "huggingface-hub==0.30.2",
    "safetensors==0.5.3",
    "scipy==1.15.2",
    "fsspec==2024.12.0",
    "nltk==3.9.1",
    "setuptools==80.9.0",
]
